--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "axios": "^1.6.8",
     "masonry-layout": "^4.2.2",
     "swiper": "^11.0.7",
     "uid": "^2.0.2",
