--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,5 +16,5 @@ jobs:
       with:
         server: ${{ secrets.FTP_SERVER}}
         username: ${{ secrets.FTP_USERNAME }}
-        password: ${{ secrets.FTP_PASSWOR }}
+        password: ${{ secrets.FTP_PASSWORD }}
         local-dir: ./dist/
