--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,21 +1,38 @@
 on: push
+
 name: 🚀 Deploy website on push
+
 jobs:
   web-deploy:
     name: 🎉 Deploy
     runs-on: ubuntu-latest
+    
     steps:
     - name: 🚚 Get latest code
       uses: actions/checkout@v4
+      
+    - name: 🗑️ Clear Actions Cache
+      uses: actions/cache@v2
+      with:
+        path: ~/.npm
+        key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+        restore-keys: |
+          ${{ runner.os }}-node-
+          
     - name: 🔨 Build Project
       run: |
         npm install
         npm run build
+        
+    - name: 🗑️ Remove old files from server
+      run: |
+        lftp -e "rm -rf ./cche-ch.com/*" -u ${{ secrets.FTP_USERNAME }},"${{ secrets.FTP_PASSWORD }}" ${{ secrets.FTP_SERVER }}
+        
     - name: 📂 Sync files
       uses: SamKirkland/FTP-Deploy-Action@v4.3.5
       with:
         server: ${{ secrets.FTP_SERVER}}
         username: ${{ secrets.FTP_USERNAME }}
         password: ${{ secrets.FTP_PASSWORD }}
-        local-dir: ./
+        local-dir: ./dist/
         server-dir: ./cche-ch.com/
